# fasthep-workshop

./: .gitignore  README.md
docs/: getting-started.md  package-overview.md  workflow-overview.md
docs/examples/: ci-strategy.md  data.md
docs/getting-started/: README.md
examples/CMS/L1Trigger/: author.yaml  remote_data.json
examples/CMS/Zmumu/: author.yaml  remote_data.json
examples/LZ/mssi/: author.yaml  remote_data.json
examples/tutorial/runtime-smoke/: README.md  author.yaml
examples/tutorial/split-packages/: README.md  author.yaml
scripts/ci/: make_tutorial_data.py  run_l1trigger.sh  run_runtime_smoke.sh  run_tutorial_split_packages.sh  run_zmumu.sh  toy_source.py
templates/analysis-repo/: README.md
templates/analysis-repo/analysis-name/: .gitlab-ci.yml  README.md  author.yaml  pixi.toml  pyproject.toml
templates/analysis-repo/analysis-name/.github/workflows/: ci.yml
templates/analysis-repo/analysis-name/profiles/: registry.yaml
templates/analysis-repo/analysis-name/src/analysis_name/: __init__.py
templates/analysis-repo/analysis-name/src/analysis_name/hooks/: __init__.py
templates/analysis-repo/analysis-name/src/analysis_name/impl/: __init__.py
templates/analysis-repo/analysis-name/src/analysis_name/sinks/: __init__.py
templates/analysis-repo/analysis-name/src/analysis_name/spec/: __init__.py
templates/analysis-repo/analysis-name/tests/: test_template_smoke.py
tests/smoke/: test_workshop_smoke.py
